fix: textarea error message spacing

--- a/src/base/styles/form-control.styl
+++ b/src/base/styles/form-control.styl
@@ -13,7 +13,7 @@ select-arrow()
 
 .t-form-control
   position relative
-  display inline-block
+  display inline-flex
   input,
   select,
   textarea
@@ -77,6 +77,8 @@ select-arrow()
     input,
     select,
     textarea
+      width 100%
+    .t-select-wrapper
       width 100%
 
 .t-form-control-error-message
